--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.2",
+        "pbmedia/laravel-ffmpeg": "5.0",
         "santigarcor/laratrust": "5.2.*"
     },
     "require-dev": {
